# zzstat

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish.yml
examples/: README.md  advanced.rs  basic.rs  bonus_system.rs  complex.rs  context.rs  cycle_detection.rs  dependencies.rs  rpg.rs
src/: bonus.rs  context.rs  error.rs  graph.rs  lib.rs  numeric.rs  resolved.rs  resolver.rs  source.rs  stat_id.rs  transform.rs
tests/: bonus_tests.rs  integration_tests.rs
